--- a/assets/stylesheets/triune.css
+++ b/assets/stylesheets/triune.css
@@ -6,7 +6,7 @@ DATE CREATED: March 8, 2018
 DATE UPDATED: March 9, 2018
 --------------------------------------------------------------------*/
 body {
-    font-family: "Lato", sans-serif;
+    font-family: "Century gothic", sans-serif;
 }
 
 #submitButton {
